--- a/todo
+++ b/todo
@@ -1,9 +1,14 @@
 Set up webpack
 Install enzyme
-Install scss-linter
 Install web-vitals
+Install autoprefixer
+Install browserlint
 
 Install react-router
 
 Install redux-tools
 Install redux-logger (actions)
+Install Rollbar
+Install HOC for notifying about uncaught erros (Error Boundary)
+
+Load only needed JS files (https://reactjs.org/docs/code-splitting.html)
